# docs/swagger.json
@@ -327,7 +327,10 @@
           "200": {
             "description": "Unidades",
             "schema": {
-              "$ref": "#/definitions/dtos.BuscarUnidadesResponse"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/dtos.BuscarUnidadesResponse"
+              }
             }
           }
         }
